--- a/SNP_First_Test/SNP_First_Test/SNP_First_Test.csproj
+++ b/SNP_First_Test/SNP_First_Test/SNP_First_Test.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="protobuf-net" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
